--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% block navbar %}
+            {% include ':admin:navbar.html.twig' %}
+        {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('js/jquery-3.1.0.min.js') }}"></script>
