--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -1,5 +1,9 @@
 {% extends ':admin:base.html.twig' %}
 
 {% block body %}
-<div class="row">Hello Admin</div>
+<div class="container">
+    <div class="row">
+
+    </div>
+</div>
 {% endblock %}
