--- a/app/Resources/views/admin/navbar.html.twig
+++ b/app/Resources/views/admin/navbar.html.twig
@@ -1,16 +1,36 @@
-<div class="top-bar">
-    <div class="top-bar-left">
-        <ul class="menu">
-            <li class="menu-text">Admin</li>
-            <li><a href="#">Users</a></li>
-            <li><a href="#">Products</a></li>
-        </ul>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button"
+                    class="navbar-toggle collapsed"
+                    data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Sunnydayze Admin</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#">Users</a>
+                </li>
+                <li>
+                    <a href="#">Products</a>
+                </li>
+            </ul>
+
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <form action="{{ path('logout') }}" method="post" role="form" class="navbar-form pull-right">
+                    <button type="submit" class="btn btn-danger btn-sm">Sign out</button>
+                </form>
+            {% endif %}
+
+        </div>
     </div>
-    <div class="top-bar-right">
-        <ul class="menu">
-            <li>
-                <a href="">Sign out</a>
-            </li>
-        </ul>
-    </div>
-</div>
+</nav>
