add admin product controller

--- a/app/Resources/views/admin/navbar.html.twig
+++ b/app/Resources/views/admin/navbar.html.twig
@@ -21,7 +21,7 @@
                     <a href="#">Users</a>
                 </li>
                 <li>
-                    <a href="#">Products</a>
+                    <a href="{{ path('admin_products') }}">Products</a>
                 </li>
             </ul>
 
