--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/dataTables.bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -17,6 +18,8 @@
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('js/jquery-3.1.0.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/datatables.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/dataTables.bootstrap.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
         {% block javascriptsPageSpecific %}{% endblock %}
