--- a/app/Resources/views/admin/navbar.html.twig
+++ b/app/Resources/views/admin/navbar.html.twig
@@ -12,11 +12,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Sunnydayze Admin</a>
+            <a class="navbar-brand" href="{{ path('admin_dashboard') }}">Sunnydayze Admin</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <li>
+                    <a href="{{ path('admin_dashboard') }}">Dashboard</a>
+                </li>
                 <li>
                     <a href="#">Users</a>
                 </li>
