product form WIP

--- a/app/Resources/views/admin/products/new.html.twig
+++ b/app/Resources/views/admin/products/new.html.twig
@@ -1,5 +1,13 @@
 {% extends ':admin:base.html.twig' %}
 
 {% block body %}
+    <div class="container">
+        <div class="row">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
 
+            <input type="submit" value="Create" class="btn btn-default pull-right"/>
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
