--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,24 +1,28 @@
 body {
     padding-top: 70px;
     padding-bottom: 40px;
-    font: 14px sans-serif;
+    font-family: 'Arial', sans-serif;
 }
+
 .login-container {
     padding-top: 90px;
 }
+
 .panel-login {
-    border-color: #ccc;
-    -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2);
+    border-color: #CCC;
+    -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
 }
-.panel-login>.panel-heading {
-    color: #00415d;
-    background-color: #fff;
-    border-color: #fff;
-    text-align:center;
+
+.panel-login > .panel-heading {
+    color: #00415D;
+    background-color: #FFF;
+    border-color: #FFF;
+    text-align: center;
 }
-.panel-login>.panel-heading a{
+
+.panel-login > .panel-heading a {
     text-decoration: none;
     color: #666;
     font-weight: bold;
@@ -27,46 +31,53 @@ body {
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
 }
-.panel-login>.panel-heading a.active{
-    color: #029f5b;
+
+.panel-login > .panel-heading a.active {
+    color: #029F5B;
     font-size: 18px;
 }
-.panel-login>.panel-heading hr{
+
+.panel-login > .panel-heading hr {
     margin-top: 10px;
     margin-bottom: 0;
     clear: both;
     border: 0;
     height: 1px;
-    background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
-    background-image: -ms-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
-    background-image: -o-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
 }
-.panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
+
+.panel-login input[type="text"], .panel-login input[type="email"], .panel-login input[type="password"] {
     height: 45px;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     font-size: 16px;
     -webkit-transition: all 0.1s linear;
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
 }
+
 .panel-login input:hover,
 .panel-login input:focus {
-    outline:none;
+    outline: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    border-color: #ccc;
+    border-color: #CCC;
 }
+
 .forgot-password {
     text-decoration: underline;
     color: #888;
 }
+
 .forgot-password:hover,
 .forgot-password:focus {
     text-decoration: underline;
     color: #666;
 }
+
 ul.helper-text {
     display: block;
     margin-top: 6px;
@@ -74,9 +85,17 @@ ul.helper-text {
     line-height: 22px;
     color: #808080;
 }
+
 li.valid {
-    color: #1fd34a;
+    color: #1FD34A;
 }
+
 hide {
     display: none;
+}
+
+.col-form-label {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    margin-bottom: 0;
 }
