--- a/app/Resources/views/admin/products/new.html.twig
+++ b/app/Resources/views/admin/products/new.html.twig
@@ -3,11 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            {{ form_start(form) }}
-            {{ form_widget(form) }}
-
-            <input type="submit" value="Create" class="btn btn-default pull-right"/>
-            {{ form_end(form) }}
+            {% include ':admin/products:_form.html.twig' with {'action': 'Create'} %}
         </div>
     </div>
 {% endblock %}
